# simplex

./: .gitignore  README.md  log2.json  pyproject.toml  pytest.ini
cpptools/: CMakeLists.txt  dependencies.md
cpptools/include/: ahocorasick.hpp  basics.h  dispatcher.hpp  filter.hpp  globmatch.hpp  levenshtein.hpp  locate.h  monitor.h  pathreader.h  search.hpp  searcher.hpp  server.h  undo.h
cpptools/include/languages/: languages.hpp  plainintegrate.h  plaintext.h  pyintegrate.h  pylang.h
cpptools/src/: basics.cpp  locate.cpp  main.cpp  monitor.cpp  pathreader.cpp  server.cpp  undo.cpp
cpptools/src/languages/: plainintegrate.cpp  plaintext.cpp  pyintegrate.cpp  pylang.cpp
cpptools/unitest/: example.cpp  test.cpp  test_client.py  test_glob.cpp  test_levenshtein.cpp  test_monitor.cpp  test_pylang.cpp  test_replace.cpp  test_source.py
cpptools/unitest/fixtures/: example.py
examples/: simple_code_agent_loop.py
simplex-ide-integrate/: CHANGELOG.md  README.md  package-lock.json  package.json
simplex-ide-integrate/src/: extension.ts
src/simplex/: __init__.py
src/simplex/agents/: __init__.py  coder.py
src/simplex/basics/: __init__.py  client.py  commandproc.py  container.py  dataclass.py  exception.py  prompt.py  utils.py
src/simplex/basics/presets/skills/: bash_python_runner.yml  bash_use.yml  code_agent_assistant.yml  database_manager.yml  docker_manager.yml  edit_tools_usage.yml  file_edition_accuracy.yml  git_operations.yml  meta_skill.yml  python_debug.yml  python_env.yml  pytorch_research.yml
src/simplex/basics/presets/system/: general_develop.md
src/simplex/context/: __init__.py  base.py  log.py  rollclipper.py  selfeval.py  tokenc.py
src/simplex/context/skill/: skill_self_eval.md
src/simplex/io/: __init__.py  base.py  terminal.py
src/simplex/loop/: __init__.py  adapter.py  base.py
src/simplex/models/: __init__.py  base.py  deepseek.py  mock.py  qwen.py
src/simplex/tools/: __init__.py  base.py  conversation.py  edit.py  mock.py  plan.py  pyinterpreter.py  pysublocal.py
src/simplex/tools/schema/: schema_bash.yml  schema_edit_collections.yml  schema_mock_calculator.yml  schema_plan.yml  schema_propose.yml  schema_pyinterpreter.yml
src/simplex/tools/skill/: skill_edit_collections.md  skill_plan.md  skill_propose.md
unitest/: test_agent_edit.py  test_clipper.py  test_edit.py  test_edit_server.py  test_interactive.py  test_logic.py  test_logic_offline.py  test_monitor.py  test_process_prompt.py  test_pyinterpreter.py  test_rehearsal.py
unitest/fixtures/output/: output_edit.txt  test_edit_client.txt
unitest/fixtures/python_example/GeCoSleep/: .gitignore  README.md  clnetworks.py  data_preprocessing.py  environment.yml  joint.py  logs.py  main.py  metric.py  models.py  no_use.py  train.py
unitest/fixtures/python_example/GeCoSleep/BayesEEGNet/: BayesCLNetwork.py  BayesEEGNet.py  FeatureNet.py  GCN.py  GraphBuilder.py  __init__.py
unitest/fixtures/python_example/GeCoSleep/DeepSleepNet/: DeepCLNetwork.py  DeepSleepNet.py  __init__.py
unitest/fixtures/python_example/GeCoSleep/GeCoSleep/: EEGGR.py  HMM.py  __init__.py  generator.py
unitest/fixtures/python_example/GeCoSleep/baselines/: DER.py  DT2W.py  EWC.py  LwF.py  TA_GEM.py  __init__.py  multihead_model.py
unitest/fixtures/python_example/GeCoSleep/old_version_code/: CGR.py  GEM.py  PackNet.py  clnetworks.py  data_preprocessing.py  generator.py  main.py  metric.py  models.py  test.py  train.py
unitest/fixtures/python_example/GeCoSleep/visualization/: decomposition.ipynb  select.ipynb  statistical.ipynb  statistical2.ipynb  visualize.ipynb
