[project]
name = "simplex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hazer", email = "22301092@bjtu.edu.cn" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "openai>=2.14.0",
]

[project.scripts]
simplex = "simplex:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
