[project]
name = "simplex"
version = "0.1.0"
description = "A simple python LLM-based code agent SDK."
readme = "README.md"
authors = [
    { name = "Hazer", email = "22301092@bjtu.edu.cn" }
]
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.6.1",
    "docker>=7.1.0",
    "numpy>=2.2.6",
    "openai>=2.14.0",
    "pexpect>=4.9.0",
    "protobuf>=6.33.5",
    "pyright>=1.1.408",
    "websockets>=16.0",
]

[project.scripts]
simplex = "simplex:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
